# pstu_doc_client

./: .env.example  .gitignore  CMakeLists.txt  README.md  api.py  api_client.cpp  api_client.h  authdialog.cpp  authdialog.h  collapsiblepanel.cpp  collapsiblepanel.h  docker-compose.yml  main.cpp  main.py  mainwindow.cpp  mainwindow.h  persondialog.cpp  persondialog.h  requirements.txt  sharedialog.cpp  sharedialog.h  style.qss
app/: auth.py  config.py  database.py  models.py  schemas.py
app/api/: ai_routes.py  auth_routes.py  chat_routes.py  database_routes.py
app/services/: ai_service.py  chat_service.py  db_service.py
dialogs/: authdialog.cpp  authdialog.h  persondialog.cpp  sharedialog.cpp
widgets/: chatwidget.cpp  chatwidget.h  collapsiblepanel.cpp  collapsiblepanel.h  personswidget.cpp  personswidget.h
